# deepseek-demo

./: .gitignore  Cargo.toml  README.md
examples/: llm_no_memory.rs  llm_post.rs  llm_rag_demo.rs  memory_agent.rs  multitool.rs  stream_context.rs  stream_tool.rs  tool.rs
fixtures/: invoice.md  membership.md  refund.md
src/: lib.rs  main.rs
