[package]
name = "deepseek-demo"
version = "0.1.0"
edition = "2021"
description = "Rust 调用 DeepSeek 大模型 API 示例 —— 本质就是一个 HTTP POST 请求"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
